WIP: Check the working of excel and csv files creation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,5 +40,8 @@
       "destructuring": "all",
       "ignoreReadBeforeAssign": true
     }]
+  },
+  "globals": {
+    "infoBoxIndex": "readonly"
   }
 }
